change font colour

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ h2{
 button{
     padding: 1rem;
     background-color: black;
-    color: white;
+    color:orange;
     font-size: 14px;
     margin-left: 1rem;
     border-radius: 20px;
